calculator_error_solved

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Ali Azad and Shushil"
+            android:text="Ali Azad and Sushil"
             android:textSize="15dp"
             />
     </LinearLayout>
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:textSize="20dp"
-                    android:text="Sylhet Engineering College."
+                    android:text="Sylhet Engineering College"
                     android:paddingBottom="10dp"
                     />
             </LinearLayout>
